# Logan

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
compat-test/: package-lock.json  package.json
docs/: architecture.md  benchmark_baseline.md  benchmark_tpc.md  design_core_local_partitioning.md  production_roadmap.md  recent_changes_walkthrough.md  task_status.md  testing_strategy.md  the_logan_story.md
docs/story/: 01_storage_engine.md  02_data_integrity.md  03_zero_copy_networking.md  04_compression.md  05_log_compaction.md
logan-bench/: Cargo.toml
logan-bench/src/: main.rs
logan-bin/: Cargo.toml
logan-bin/src/: main.rs
logan-client/: Cargo.toml
logan-client/src/: lib.rs  main.rs
logan-common/: Cargo.toml
logan-common/src/: error.rs  error_code.rs  lib.rs  logging.rs
logan-protocol/: Cargo.toml
logan-protocol/src/: api_keys.rs  batch.rs  codec.rs  compression.rs  error_codes.rs  lib.rs  messages.rs  primitives.rs
logan-protocol/tests/: roundtrip.rs
logan-server/: Cargo.toml
logan-server/src/: dispatch.rs  error.rs  lib.rs  offset_manager.rs  server.rs  shard.rs
logan-server/src/protocol/: api_keys.rs  codec.rs  error_codes.rs  messages.rs  mod.rs  primitives.rs
logan-server/tests/: persistence_test.rs
logan-storage/: Cargo.toml
logan-storage/src/: cleaner.rs  config.rs  index.rs  index_prop_test.rs  lib.rs  log.rs  manager.rs  record.rs  record_prop_test.rs  segment.rs
logan-tpc/: Cargo.toml
logan-tpc/src/: main.rs
