[package]
name = "logan-bench"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
bytes = "1.6.0"
clap = { version = "4.5.53", features = ["derive"] }
hdrhistogram = "7.5.4"
logan-client = { version = "0.1.0", path = "../logan-client" }
logan-protocol = { version = "0.1.0", path = "../logan-protocol" }
tokio = { version = "1.48.0", features = ["full"] }
