[package]
name = "logan-client"
version.workspace = true
edition.workspace = true

[dependencies]
logan-common = { path = "../logan-common" }
logan-protocol = { path = "../logan-protocol" }
bytes = "1.2.1"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
anyhow = "1.0.66"
num-traits = "0.2.15"
num-derive = "0.3.3"
clap = { version = "4.5.53", features = ["derive"] }
tracing-subscriber = "0.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
logan-server = { path = "../logan-server" }
dashmap = "5.5.3"
