[package]
name = "logan-common"
version.workspace = true
edition.workspace = true
description = "Common types and utilities for the Logan Kafka broker"
license = "MIT"
publish = false

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
log = "0.4"
