[package]
name = "logan-protocol"
version.workspace = true
edition.workspace = true
description = "Kafka protocol definitions and serialization for Logan"
license = "MIT"
publish = false

[dependencies]
# Internal crates
logan-common = { path = "../logan-common" }

# External dependencies
anyhow = "1.0"
bytes = "1.3"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
snap = "1.1.1"
lz4_flex = "0.12.0"
crc32fast = "1.5.0"
