[package]
name = "logan-server"
version.workspace = true
edition.workspace = true
description = "Server implementation for the Logan Kafka broker"
license = "MIT"
publish = false

[dependencies]
# Internal crates
logan-common = { path = "../logan-common" }
logan-protocol = { path = "../logan-protocol" }
logan-storage = { path = "../logan-storage" }

# External dependencies
anyhow = "1.0.66"
async-trait = "0.1"
bytes = "1.2.1"
dashmap = "5.4.0"
futures = "0.3"
num-traits = "0.2.15"
num-derive = "0.3.3"
thiserror = "1.0.61"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3.0"
